# benchmarks-reconstruction

./: .gitignore  Cargo.toml  README.md  check-lp.sh  check-setup.sh  clean-benchs.sh  clean-proof.sh  collects.py  color-logger.bash  config.env  download_benchs.sh  elaborate.sh  gen-proof.sh  install.sh  joblog.py  jobres.py  jobs.py  lambdapi.pkg  parselogs.py  pyvenv.cfg  results.py  run-bench.sh  run.sh  run_all.sh  translate.sh
Bakery/: tlapm_06392b.smt2  tlapm_14aa5d.smt2  tlapm_4a2af6.smt2  tlapm_4a8456.smt2  tlapm_6847d8.smt2  tlapm_861fbe.smt2  tlapm_8d8cb6.smt2  tlapm_a65581.smt2  tlapm_bd2062.smt2  tlapm_d923d5.smt2  tlapm_e4c55c.smt2  tlapm_f03052.smt2
EWD840/: tlapm_3b889e.smt2  tlapm_3f7ffd.smt2  tlapm_45983a.smt2  tlapm_4c2ec8.smt2  tlapm_5388fe.smt2  tlapm_54c876.smt2  tlapm_61fda2.smt2  tlapm_64f0b6.smt2  tlapm_6de43c.smt2  tlapm_823bae.smt2  tlapm_9145df.smt2  tlapm_978c32.smt2  tlapm_b58577.smt2  tlapm_c881d0.smt2  tlapm_dfc8ca.smt2  tlapm_e0b176.smt2  tlapm_ed6a39.smt2  tlapm_f761c0.smt2  tlapm_fac9a9.smt2  tlapm_fd3279.smt2
paxos/: tlapm_113abf.smt2  tlapm_198fc8.smt2  tlapm_259eb9.smt2  tlapm_26e3cf.smt2  tlapm_271c7c.smt2  tlapm_2a311b.smt2  tlapm_38e322.smt2  tlapm_4757a5.smt2  tlapm_4c606d.smt2  tlapm_4e0042.smt2  tlapm_51a9bf.smt2  tlapm_615c63.smt2  tlapm_661db4.smt2  tlapm_66bdf2.smt2  tlapm_6716ff.smt2  tlapm_6967a4.smt2  tlapm_7851b1.smt2  tlapm_7b17ad.smt2  tlapm_7d8ebe.smt2  tlapm_833ab3.smt2  tlapm_83ae4b.smt2  tlapm_869711.smt2  tlapm_91c7fe.smt2  tlapm_a8678b.smt2  tlapm_b4e724.smt2  tlapm_bace98.smt2  tlapm_bee085.smt2  (+8 more)
(+7858 files in other folders)
