[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
file_test_runner = "0.7.4"
regex = "1.11.1"
rev_buf_reader = "0.3.0"
test-generator = "0.3.1"
thiserror = "2.0.6"
clap = { version = "4.5.24", features = ["derive"] }
tempdir = "0.3.7"
fs_extra = "1.3.0"
log = "0.4.22"
env_logger = "0.11.6"
glob = "0.3.2"
jwalk = "0.8.1"

[[test]]
name = "specs"
path = "tests/spec_test.rs"
harness = false
